--- a/.github/workflows/deployV2.yml
+++ b/.github/workflows/deployV2.yml
@@ -26,9 +26,8 @@ jobs:
   #           widget:
   #             - 'widget/**'
 
-  frontend-build-and-push:
+  docker-setup:
     runs-on: ubuntu-latest
-    # if: ${{ needs['paths-filter'].outputs.frontend == 'true' }}
     steps:
       - name: Check out repository code ...
         uses: actions/checkout@v4
@@ -45,6 +44,11 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+  frontend-build-and-push:
+    runs-on: ubuntu-latest
+    # if: ${{ needs['paths-filter'].outputs.frontend == 'true' }}
+    needs: docker-setup
+    steps:
       - name: Build and push docker image
         id: docker_build
         uses: docker/build-push-action@v6
@@ -58,27 +62,14 @@ jobs:
   api-build-and-push:
     runs-on: ubuntu-latest
     # if: ${{ needs.paths-filter.outputs.api == 'true' }}
+    needs: docker-setup
     steps:
-      - name: Check out repository code ...
-        uses: actions/checkout@v4
-      
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Build and push docker image
         id: docker_build
         uses: docker/build-push-action@v6
         with:
-          context: ./api
+          context: ./
+          file: ./api/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/hexabot-api:latest
@@ -86,27 +77,14 @@ jobs:
   widget-build-and-push:
     runs-on: ubuntu-latest
     # if: ${{ needs.paths-filter.outputs.widget == 'true' }}
+    needs: docker-setup
     steps:
-      - name: Check out repository code ...
-        uses: actions/checkout@v4
-      
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Build and push docker image
         id: docker_build
         uses: docker/build-push-action@v6
         with:
-          context: ./widget
+          context: ./
+          file: ./widget/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/hexabot-widget:latest
