--- a/.github/workflows/deployV2.yml
+++ b/.github/workflows/deployV2.yml
@@ -28,12 +28,14 @@ jobs:
 
   docker-setup:
     runs-on: ubuntu-latest
+    outputs:
+      auth_token: ${{ steps.login.outputs.auth_token }}
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}  
 
   frontend-build-and-push:
     runs-on: ubuntu-latest
@@ -58,6 +60,9 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/hexabot-frontend:latest
+    env:
+      # Reuse Docker auth token
+      DOCKER_AUTH_CONFIG: ${{ needs.docker-setup.outputs.auth_token }}
 
   api-build-and-push:
     runs-on: ubuntu-latest
