--- a/.github/workflows/deployV2.yml
+++ b/.github/workflows/deployV2.yml
@@ -31,11 +31,13 @@ jobs:
     outputs:
       auth_token: ${{ steps.login.outputs.auth_token }}
     steps:
-      - name: Login to Docker Hub
+      - name: Login to Docker Hub and export auth token
+        id: login
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}  
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+        # Capture auth token
 
   frontend-build-and-push:
     runs-on: ubuntu-latest
@@ -51,18 +53,18 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push docker image
+      - name: Build and push frontend docker image
         id: docker_build
         uses: docker/build-push-action@v6
         with:
-          context: ./
+          context: ./frontend
           file: ./frontend/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/hexabot-frontend:latest
-    env:
-      # Reuse Docker auth token
-      DOCKER_AUTH_CONFIG: ${{ needs.docker-setup.outputs.auth_token }}
+        env:
+          # Reuse Docker auth token
+          DOCKER_AUTH_CONFIG: ${{ needs.docker-setup.outputs.auth_token }}
 
   api-build-and-push:
     runs-on: ubuntu-latest
