--- a/.github/workflows/deployV2.yml
+++ b/.github/workflows/deployV2.yml
@@ -26,23 +26,9 @@ jobs:
   #           widget:
   #             - 'widget/**'
 
-  docker-setup:
-    runs-on: ubuntu-latest
-    outputs:
-      auth_token: ${{ steps.login.outputs.token }}
-    steps:
-      - name: Login to Docker Hub and export auth token
-        id: login
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-        # Capture auth token
-
   frontend-build-and-push:
     runs-on: ubuntu-latest
     # if: ${{ needs['paths-filter'].outputs.frontend == 'true' }}
-    needs: docker-setup
     steps:
       - name: Check out repository code ...
         uses: actions/checkout@v4
@@ -52,6 +38,13 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub and export auth token
+        id: login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push frontend docker image
         id: docker_build
@@ -65,50 +58,62 @@ jobs:
         env:
           DOCKER_AUTH_CONFIG: ${{ needs.docker-setup.outputs.auth_token }}  
 
-  # api-build-and-push:
-  #   runs-on: ubuntu-latest
-  #   # if: ${{ needs.paths-filter.outputs.api == 'true' }}
-  #   needs: docker-setup
-  #   steps:
-  #     - name: Check out repository code ...
-  #       uses: actions/checkout@v4
+  api-build-and-push:
+    runs-on: ubuntu-latest
+    # if: ${{ needs.paths-filter.outputs.api == 'true' }}
+    steps:
+      - name: Check out repository code ...
+        uses: actions/checkout@v4
       
-  #     - name: Set up QEMU
-  #       uses: docker/setup-qemu-action@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3
-
-  #     - name: Build and push docker image
-  #       id: docker_build
-  #       uses: docker/build-push-action@v6
-  #       with:
-  #         context: ./
-  #         file: ./api/Dockerfile
-  #         platforms: linux/amd64,linux/arm64
-  #         push: true
-  #         tags: ${{ secrets.DOCKERHUB_USERNAME }}/hexabot-api:latest
-
-  # widget-build-and-push:
-  #   runs-on: ubuntu-latest
-  #   # if: ${{ needs.paths-filter.outputs.widget == 'true' }}
-  #   needs: docker-setup
-  #   steps:
-  #     - name: Check out repository code ...
-  #       uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       
-  #     - name: Set up QEMU
-  #       uses: docker/setup-qemu-action@v3
+      - name: Login to Docker Hub and export auth token
+        id: login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3
+      - name: Build and push docker image
+        id: docker_build
+        uses: docker/build-push-action@v6
+        with:
+          context: ./
+          file: ./api/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/hexabot-api:latest
 
-  #     - name: Build and push docker image
-  #       id: docker_build
-  #       uses: docker/build-push-action@v6
-  #       with:
-  #         context: ./
-  #         file: ./widget/Dockerfile
-  #         platforms: linux/amd64,linux/arm64
-  #         push: true
-  #         tags: ${{ secrets.DOCKERHUB_USERNAME }}/hexabot-widget:latest
+  widget-build-and-push:
+    runs-on: ubuntu-latest
+    # if: ${{ needs.paths-filter.outputs.widget == 'true' }}
+    steps:
+      - name: Check out repository code ...
+        uses: actions/checkout@v4
+      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub and export auth token
+        id: login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push docker image
+        id: docker_build
+        uses: docker/build-push-action@v6
+        with:
+          context: ./
+          file: ./widget/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/hexabot-widget:latest
