--- a/.github/workflows/deployV2.yml
+++ b/.github/workflows/deployV2.yml
@@ -6,29 +6,31 @@ on:
   workflow_dispatch:
 
 jobs:
-  # paths-filter:
-  #   runs-on: ubuntu-latest
-  #   outputs:
-  #     frontend: ${{ steps.filter.outputs.frontend }}
-  #     api: ${{ steps.filter.outputs.api }}
-  #     widget: ${{ steps.filter.outputs.widget }}
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Filter paths
-  #       id: filter
-  #       uses: dorny/paths-filter@v3
-  #       with:
-  #         filters: |
-  #           frontend:
-  #             - 'frontend/**'
-  #           api:  
-  #             - 'api/**'
-  #           widget:
-  #             - 'widget/**'
+  paths-filter:
+    runs-on: ubuntu-latest
+    outputs:
+      frontend: ${{ steps.filter.outputs.frontend }}
+      api: ${{ steps.filter.outputs.api }}
+      widget: ${{ steps.filter.outputs.widget }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Filter paths
+        id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            frontend:
+              - 'frontend/**'
+            api:  
+              - 'api/**'
+            widget:
+              - 'widget/**'
 
   frontend-build-and-push:
     runs-on: ubuntu-latest
-    # if: ${{ needs['paths-filter'].outputs.frontend == 'true' }}
+    needs: 
+      - paths-filter
+    if: ${{ needs.paths-filter.outputs.frontend == 'true' }}  
     steps:
       - name: Check out repository code ...
         uses: actions/checkout@v4
@@ -41,7 +43,7 @@ jobs:
 
       - name: Login to Docker Hub and export auth token
         id: login
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -60,6 +62,8 @@ jobs:
 
   api-build-and-push:
     runs-on: ubuntu-latest
+    needs: 
+      - paths-filter
     # if: ${{ needs.paths-filter.outputs.api == 'true' }}
     steps:
       - name: Check out repository code ...
@@ -73,7 +77,7 @@ jobs:
       
       - name: Login to Docker Hub and export auth token
         id: login
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -90,6 +94,8 @@ jobs:
 
   widget-build-and-push:
     runs-on: ubuntu-latest
+    needs: 
+      - paths-filter
     # if: ${{ needs.paths-filter.outputs.widget == 'true' }}
     steps:
       - name: Check out repository code ...
@@ -103,7 +109,7 @@ jobs:
 
       - name: Login to Docker Hub and export auth token
         id: login
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
