--- a/.github/workflows/deployV2.yml
+++ b/.github/workflows/deployV2.yml
@@ -63,7 +63,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: 
       - paths-filter
-    # if: ${{ needs.paths-filter.outputs.api == 'true' }}
+    if: ${{ needs.paths-filter.outputs.api == 'true' }}
     steps:
       - name: Check out repository code ...
         uses: actions/checkout@v4
@@ -95,7 +95,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: 
       - paths-filter
-    # if: ${{ needs.paths-filter.outputs.widget == 'true' }}
+    if: ${{ needs.paths-filter.outputs.widget == 'true' }}
     steps:
       - name: Check out repository code ...
         uses: actions/checkout@v4
