--- a/.github/workflows/deployV2.yml
+++ b/.github/workflows/deployV2.yml
@@ -25,11 +25,27 @@ jobs:
               - 'api/**'
             widget:
               - 'widget/**'
+  
+  docker-setup:
+    runs-on: ubuntu-latest
+    outputs:
+      auth_token: ${{ steps.docker_login.outputs.auth_token }}
+    steps:
+      - name: Login to Docker Hub
+        id: docker_login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+        # Capture the authentication token
+        env:
+          DOCKER_AUTH_CONFIG: ${{ steps.docker_login.outputs.auth_token }}
 
   frontend-build-and-push:
     runs-on: ubuntu-latest
     needs: 
       - paths-filter
+      - docker-setup
     if: ${{ needs.paths-filter.outputs.frontend == 'true' }}  
     steps:
       - name: Check out repository code ...
@@ -41,13 +57,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub and export auth token
-        id: login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Build and push frontend docker image
         id: docker_build
         uses: docker/build-push-action@v6
@@ -57,7 +66,8 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/hexabot-frontend:latest
-
+        env:
+          DOCKER_AUTH_CONFIG: ${{ needs.docker-setup.outputs.auth_token }}
 
   api-build-and-push:
     runs-on: ubuntu-latest
